Fixed spacing between title and subtext

--- a/src/styles/designs/splash_page.scss
+++ b/src/styles/designs/splash_page.scss
@@ -46,6 +46,7 @@
       // top: 180px;
       // right: 320px;
       // width: 500px;
+      
     
       h1 {
         color: $primary-peppermint-red;
@@ -57,9 +58,11 @@
       }
       p {
         color: $secondary-peppermint-red;
-        padding-left: 15px;
-        font-size: 25px;
+  
+        text-align: center;
+        font-size: 34px;
         font-family: $secondary-font;
+        line-height: 2%;
       }
     }
 
@@ -79,7 +82,7 @@
   padding: 20px 15px 20px 15px;
   width: 50%;
   margin-left: 16%;
-  margin-top: 2%;
+  margin-top: 5%;
   @include standardRadius;
 
   li button {
